; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_update_context_time.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_update_context_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_context = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.perf_event_context*)* @update_context_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_context_time(%struct.perf_event_context* %0) #0 {
  %2 = alloca %struct.perf_event_context*, align 8
  %3 = alloca i64, align 8
  store %struct.perf_event_context* %0, %struct.perf_event_context** %2, align 8
  %4 = call i64 (...) @perf_clock()
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %7 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = sub nsw i64 %5, %8
  %10 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %11 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %9
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %11, align 8
  %16 = load i64, i64* %3, align 8
  %17 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %18 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %17, i32 0, i32 0
  store i64 %16, i64* %18, align 8
  ret void
}

declare dso_local i64 @perf_clock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
